Fix overflow in commit graph
Limit commit message to 50% width. This is rather crude but should work
for common use cases with not too-long author names.

Fixes: https://github.com/go-gitea/gitea/issues/17944

--- a/web_src/less/features/gitgraph.less
+++ b/web_src/less/features/gitgraph.less
@@ -138,6 +138,10 @@
       width: auto;
       height: 18px;
     }
+
+    .message {
+      max-width: 50%;
+    }
   }
 
   #graph-raw-list {
